--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
-    "dev": "gatsby develop",
+    "dev": "netlify dev",
     "lint": "eslint .",
     "format": "prettier-eslint --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
@@ -20,8 +20,11 @@
     "@mui/material": "^5.4.2",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
+    "aws-sdk": "^2.1099.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-material-ui": "^4.1.0",
@@ -33,12 +36,14 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-youtube": "^7.14.0",
     "swiper": "^8.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^15.0.0",
     "eslint": "^8.8.0",
