--- a/package.json
+++ b/package.json
@@ -2,45 +2,36 @@
   "private": true,
   "name": "sanity-gatsby-portfolio-web",
   "version": "1.0.3",
-  "author": "Sanity <hello@sanity.io>",
+  "author": "Isaac Cohen",
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
-    "dev": "netlify dev",
+    "dev": "gatsby develop",
     "lint": "eslint .",
     "format": "prettier-eslint --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@headlessui/react": "^1.5.0",
+    "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.4.2",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
     "aws-sdk": "^2.1099.0",
     "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
-    "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-source-sanity": "^7.3.2",
-    "gatsby-theme-material-ui": "^5.1.0",
     "get-youtube-id": "^1.0.1",
     "pro-gallery": "^3.1.38",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-youtube": "^7.14.0",
-    "swiper": "^8.0.7"
+    "typeface-forum": "^1.1.13"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
