--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "get-youtube-id": "^1.0.1",
     "pro-gallery": "^3.1.38",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-h5-audio-player": "^3.8.4",
