--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^1.0.1",
+    "@react-icons/all-files": "^4.1.0",
     "@sanity/image-url": "^1.0.1",
     "algoliasearch": "^4.13.1",
     "aws-sdk": "^2.1099.0",
