--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pro-gallery": "^3.1.38",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-h5-audio-player": "^3.8.4",
