--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "gatsby-plugin-netlify": "^4.4.0",
     "gatsby-plugin-postcss": "^5.9.0",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
