--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.1",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^1.0.6",
-    "@portabletext/react": "^1.0.1",
+    "@portabletext/react": "^3.2.1",
     "@react-icons/all-files": "^4.1.0",
     "@sanity/image-url": "^1.0.1",
     "algoliasearch": "^4.13.1",
@@ -25,19 +25,18 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
-    "gatsby": "^4.6.0",
-    "gatsby-plugin-algolia": "^0.26.0",
-    "gatsby-plugin-image": "^2.6.0",
+    "gatsby": "^5.14.1",
+    "gatsby-plugin-algolia": "^1.0.3",
+    "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-netlify": "^5.1.1",
-    "gatsby-plugin-postcss": "^5.25.0",
-    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-postcss": "^6.14.0",
     "gatsby-source-sanity": "^7.3.2",
     "get-youtube-id": "^1.0.1",
     "pro-gallery": "^5.0.118",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-h5-audio-player": "^3.8.4",
     "react-helmet": "^6.1.0",
@@ -51,6 +50,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^15.0.0",
+    "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
