--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "dev": "gatsby develop",
     "lint": "eslint .",
     "format": "prettier-eslint --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "test": "jest"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^1.0.6",
+    "@headlessui/react": "^2.2.3",
+    "@heroicons/react": "^2.2.0",
     "@portabletext/react": "^3.2.1",
     "@react-icons/all-files": "^4.1.0",
     "@sanity/image-url": "^1.0.1",
@@ -48,9 +48,16 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.14.0",
     "dotenv": "^15.0.0",
     "eslint": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.3.0",
